@@ -36,19 +36,6 @@ public class Reference {
     public static final Color YELLOW = new Color(255, 188, 0);
     public static final Color DARKAQUA = new Color(9, 79, 70);
 
-    public static final Font MONOSPACED30 = new Font("Monospaced", Font.PLAIN, 30);
-    public static final Font MONOSPACED30BOLD = new Font("Monospaced", Font.BOLD, 30);
-    public static final Font MONOSPACED45 = new Font("Monospaced", Font.PLAIN, 45);
-    public static final Font MONOSPACED60BOLD = new Font("Monospaced", Font.BOLD, 60);
-
-    public static final Font JHENGHEI30 = new Font("Microsoft JhengHei", Font.PLAIN, 30);
-    public static final Font JHENGHEI40BOLD = new Font("Microsoft JhengHei", Font.BOLD, 40);
-    public static final Font JHENGHEI45 = new Font("Microsoft JhengHei", Font.PLAIN, 45);
-    public static final Font JHENGHEI60BOLD = new Font("Microsoft JhengHei", Font.BOLD, 60);
-    public static final Font JHENGHEI80BOLD = new Font("Microsoft JhengHei", Font.BOLD, 80);
-    public static final Font JHENGHEI120BOLD = new Font("Microsoft JhengHei", Font.BOLD, 120);
-
-
 
     public static final Border BEVEL1 = BorderFactory.createBevelBorder(0, AQUA, WHITE);
     public static final Border BEVEL2 = BorderFactory.createBevelBorder(1, BLAZE, ORANGE);
