@@ -1,5 +1,9 @@
 visit https://hackmd.io/5Tg4rqrBQSaoW38Ru8oBFA?view for more info
 
+===gradle_6.5=== 8/12 20pm
+-clean up code
+
+
 ===gradle_6.4=== 8/12 19pm
 -no longer uses deprecated apis
 
